src/test/ui/error-codes/E0390.stderr
error[E0390]: cannot define inherent `impl` for primitive types
  --> $DIR/E0390.rs:5:6
   |
LL | impl *mut Foo {}
   |      ^^^^^^^^
   |
   = help: consider using an extension trait instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0390`.
